--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,29 @@
+body {
+	display: flex;
+	justify-content: center;
+}
 #carousel {
 	margin: auto;
 	width: 400px;
 	height: 300px;
-	border: 2px solid;
+	border: 1px solid;
 	overflow: hidden;
 	position: relative;
-
+}
+ul {
+	list-style-type: none;
+	width: 2000px;
+	padding: 0px;
 }
 li {
 	list-style-type: none;
-	
 	width: 400px;
 	height: 300px;
+	display: inline-block;
+
+}
+li img {
+	width: 100%;
+	height: 100%;
+
 }
